# azure-text-to-speech

./: Alpaca_2_1.xml  Alpaca_2_10.xml  Alpaca_2_11.xml  Alpaca_2_2.xml  Alpaca_2_3.xml  Alpaca_2_6.xml  Alpaca_2_9.xml  azure-text-to-speech.py  azure-text-to-speech_copy.py  boar-ssml.xml  pyproject.toml  ssml.xml  test.py  test.xml  total.csv
0509/xml/: Alpaca_13_71.xml  Alpaca_13_80.xml  Alpaca_15_24.xml  Alpaca_15_25.xml  Alpaca_15_35.xml  Alpaca_15_37.xml  Alpaca_1_1.xml  Alpaca_1_4.xml  Alpaca_1_5.xml  Alpaca_1_6.xml  Alpaca_2_1.xml  Alpaca_2_10.xml  Alpaca_2_11.xml  Alpaca_2_12.xml  Alpaca_2_2.xml  Alpaca_2_3.xml  Alpaca_2_6.xml  Alpaca_2_7.xml  Alpaca_2_9.xml  Alpaca_7_1.xml  Alpaca_7_10.xml  Alpaca_7_11.xml  Alpaca_7_12.xml  Alpaca_7_15.xml  Alpaca_7_19.xml  Alpaca_7_2.xml  Alpaca_7_20.xml  Alpaca_7_22.xml  Alpaca_7_24.xml  Alpaca_7_26.xml  Alpaca_7_28.xml  Alpaca_7_29.xml  Alpaca_7_3.xml  Alpaca_7_30.xml  Alpaca_7_31.xml  Alpaca_7_35.xml  Alpaca_7_37.xml  Alpaca_7_4.xml  Alpaca_7_5.xml  Alpaca_7_8.xml  (+18 more)
